--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
+        xmlns:qtreelist ="clr-namespace:QSoft.WPF.TreeListView;assembly=QSoft.WPF.TreeListView"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
 
@@ -136,19 +137,45 @@
 
     </Window.Resources>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <local:TreeListView x:Name="_list" ItemsSource="{Binding Children}"  BorderThickness="2">
             <local:TreeListView.ItemTemplate >
                 <HierarchicalDataTemplate ItemsSource="{Binding Children}" >
-                    <Border BorderThickness="2" BorderBrush="Yellow" CornerRadius="0" Margin="1"  x:Name="back" MinWidth="70"
-                                DataContext="{Binding}" >
-                        <StackPanel Orientation="Horizontal" Margin="2">
-                            <TextBlock Text="{Binding Text}" Margin="2 0"/>
-                        </StackPanel>
-                    </Border>
+                    <!--<TextBlock Text="{Binding}" Margin="2 0"/>-->
                 </HierarchicalDataTemplate>
 
             </local:TreeListView.ItemTemplate>
 
         </local:TreeListView>
+        <ListView Grid.Column="1">
+            <ListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        <GridViewColumn/>
+                    </GridView.Columns>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <qtreelist:TreeListView x:Name="qtreelistview" Grid.Column="2">
+            <qtreelist:TreeListView.ItemTemplate >
+                <HierarchicalDataTemplate ItemsSource="{Binding Children}" >
+                    <!--<TextBlock Text="{Binding}" Margin="2 0"/>-->
+                </HierarchicalDataTemplate>
+
+            </qtreelist:TreeListView.ItemTemplate>
+            <qtreelist:TreeListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />
+                        <GridViewColumn Header="Age"      DisplayMemberBinding="{Binding Age}" Width="60" />
+                        <GridViewColumn Header="Sex"      DisplayMemberBinding="{Binding Sex}" Width="60"/>
+                    </GridView.Columns>
+                </GridView>
+            </qtreelist:TreeListView.View>
+        </qtreelist:TreeListView>
     </Grid>
 </Window>
