--- a/QSoft.WPF.TreeListView/Themes/Generic.xaml
+++ b/QSoft.WPF.TreeListView/Themes/Generic.xaml
@@ -67,6 +67,13 @@
         </Setter>
     </Style>
 
+    <GridViewColumnCollection x:Key="gvcc">
+        <GridViewColumn Header="Name" CellTemplate="{StaticResource CellTemplate_Name}" />
+        <GridViewColumn Header="Age"      DisplayMemberBinding="{Binding Age}" Width="60" />
+        <GridViewColumn Header="Sex"      DisplayMemberBinding="{Binding Sex}" Width="60"/>
+    </GridViewColumnCollection>
+
+
     <Style TargetType="{x:Type local:TreeListViewItem}">
         <Setter Property="Template">
             <Setter.Value>
@@ -81,8 +88,7 @@
                               Content="{TemplateBinding Header}"
                               Columns="{StaticResource gvcc}" />-->
                             <GridViewRowPresenter x:Name="PART_Header" 
-                                                  Content="{TemplateBinding Header}"
-                                                    Columns="{TemplateBinding GridView.ColumnCollection}"/>
+                                        Content="{TemplateBinding Header}"/>
                         </Border>
 
                         <ItemsPresenter x:Name="ItemsHost" />
@@ -125,4 +131,6 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    
 </ResourceDictionary>
