--- a/QSoft.WPF.TreeListView/Themes/Generic.xaml
+++ b/QSoft.WPF.TreeListView/Themes/Generic.xaml
@@ -34,21 +34,24 @@
     </Style>
     <local:LevelToIndentConverter x:Key="LevelToIndentConverter"/>
 
-    <DataTemplate x:Key="CellTemplate_Name">
-        <DockPanel>
-            <ToggleButton x:Name="Expander" Style="{StaticResource ExpandCollapseToggleStyle}" Margin="{Binding Level,
-                     Converter={StaticResource LevelToIndentConverter},RelativeSource={RelativeSource AncestorType={x:Type local:TreeListViewItem}}}"
-                     IsChecked="{Binding Path=IsExpanded,RelativeSource={RelativeSource AncestorType={x:Type local:TreeListViewItem}}}" ClickMode="Press"/>
-            <TextBlock Text="{Binding Name}"/>
-        </DockPanel>
-        <DataTemplate.Triggers>
-            <DataTrigger Binding="{Binding Path=HasItems,RelativeSource={RelativeSource AncestorType={x:Type local:TreeListViewItem}}}" Value="False">
-                <Setter TargetName="Expander" Property="Visibility" Value="Hidden"/>
-            </DataTrigger>
-        </DataTemplate.Triggers>
-    </DataTemplate>
-
+    
+    
     <Style TargetType="{x:Type local:TreeListView}">
+        <Style.Resources>
+            <DataTemplate x:Key="CellTemplate_Name11">
+                <DockPanel>
+                    <ToggleButton x:Name="Expander" 
+            Margin="{Binding Level, Converter={StaticResource LevelToIndentConverter},RelativeSource={RelativeSource AncestorType={x:Type local:TreeListViewItem}}}"
+            IsChecked="{Binding Path=IsExpanded,RelativeSource={RelativeSource AncestorType={x:Type local:TreeListViewItem}}}" ClickMode="Press" Style="{StaticResource ExpandCollapseToggleStyle}"/>
+                    <TextBlock Text="{Binding Name}"/>
+                </DockPanel>
+                <DataTemplate.Triggers>
+                    <DataTrigger Binding="{Binding Path=HasItems,RelativeSource={RelativeSource AncestorType={x:Type local:TreeListViewItem}}}" Value="False">
+                        <Setter TargetName="Expander" Property="Visibility" Value="Hidden"/>
+                    </DataTrigger>
+                </DataTemplate.Triggers>
+            </DataTemplate>
+        </Style.Resources>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:TreeListView}">
@@ -95,7 +98,7 @@
                     </StackPanel>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsExpanded" Value="false">
-                            <Setter TargetName="ItemsHost" Property="Visibility"               Value="Collapsed"/>
+                            <Setter TargetName="ItemsHost" Property="Visibility" Value="Collapsed"/>
                         </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
@@ -113,7 +116,7 @@
                         </MultiTrigger>
                         <Trigger Property="IsSelected"  Value="true">
                             <Setter TargetName="Bd" Property="Background" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
-                            <Setter Property="Foreground"  Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}"/>
+                            <!--<Setter Property="Foreground"  Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}"/>-->
                         </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
