--- a/QSoft.WPF.TreeListView/Themes/Generic.xaml
+++ b/QSoft.WPF.TreeListView/Themes/Generic.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:QSoft.WPF.TreeListView">
-    <Style x:Key="ExpandCollapseToggleStyle" TargetType="{x:Type ToggleButton}">
+    <Style x:Key="ExpandCollapseToggleStyle" TargetType="ToggleButton">
         <Setter Property="Focusable"  Value="False"/>
         <Setter Property="Width"      Value="19"/>
         <Setter Property="Height"     Value="13"/>
