--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -147,6 +147,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <local:TreeListView x:Name="_list" ItemsSource="{Binding Children}"  BorderThickness="2">
             <local:TreeListView.ItemTemplate >
@@ -158,17 +159,24 @@
 
         </local:TreeListView>
 
-        <qtreelist:TreeListView x:Name="qtreelistview" Grid.Column="2">
+        <qtreelist:TreeListView x:Name="qtreelistview" Grid.Column="1" ExpenderStyle="{DynamicResource ExpandCollapseToggleStyle}">
             <qtreelist:TreeListView.ItemTemplate >
                 <HierarchicalDataTemplate ItemsSource="{Binding Children}" >
-                    <!--<TextBlock Text="{Binding}" Margin="2 0"/>-->
                 </HierarchicalDataTemplate>
 
             </qtreelist:TreeListView.ItemTemplate>
             <qtreelist:TreeListView.View>
                 <GridView>
                     <GridView.Columns>
-                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />
+                        <!--<GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />-->
+                        <GridViewColumn Header="Name">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Name}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
                         <GridViewColumn Header="Age" DisplayMemberBinding="{Binding Age}" Width="60" />
                         <GridViewColumn Header="Sex" DisplayMemberBinding="{Binding Sex}" Width="60"/>
                         <GridViewColumn>
@@ -185,5 +193,36 @@
                 </GridView>
             </qtreelist:TreeListView.View>
         </qtreelist:TreeListView>
+        <!--<qtreelist:TreeListView x:Name="qtreelistview1" Grid.Column="2" ExpenderStyle="{DynamicResource ExpandCollapseToggleStyle}">
+            <qtreelist:TreeListView.ItemTemplate >
+                <HierarchicalDataTemplate ItemsSource="{Binding Items}" >
+                </HierarchicalDataTemplate>
+
+            </qtreelist:TreeListView.ItemTemplate>
+            <qtreelist:TreeListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        --><!--<GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />--><!--
+                        <GridViewColumn Header="Name">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Name}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn>
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button>Edit</Button>
+                                        <Button>Delete</Button>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView.Columns>
+                </GridView>
+            </qtreelist:TreeListView.View>
+        </qtreelist:TreeListView>-->
     </Grid>
 </Window>
