--- a/QSoft.WPF.TreeListView/Themes/Generic.xaml
+++ b/QSoft.WPF.TreeListView/Themes/Generic.xaml
@@ -2,70 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:QSoft.WPF.TreeListView">
-    <Style x:Key="ExpandCollapseToggleStyle" TargetType="ToggleButton">
-        <Setter Property="Focusable"  Value="False"/>
-        <Setter Property="Width"      Value="19"/>
-        <Setter Property="Height"     Value="13"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Border Background="Transparent" Height="16" Padding="5,5,5,5" Width="16">
-                        <Path x:Name="ExpandPath"  Fill="#FFFFFFFF" Stroke="#FF818181">
-                            <Path.Data>
-                                <PathGeometry Figures="M0,0 L0,6 L6,0 z"/>
-                            </Path.Data>
-                            <Path.RenderTransform>
-                                <RotateTransform Angle="135" CenterX="3" CenterY="3"/>
-                            </Path.RenderTransform>
-                        </Path>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsChecked" Value="True">
-                            <Setter Property="RenderTransform" TargetName="ExpandPath">
-                                <Setter.Value>
-                                    <RotateTransform Angle="180" CenterX="3" CenterY="3"/>
-                                </Setter.Value>
-                            </Setter>
-                            <Setter Property="Fill" TargetName="ExpandPath" Value="#FF595959"/>
-                            <Setter Property="Stroke" TargetName="ExpandPath" Value="#FF262626"/>
-                        </Trigger>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Stroke" TargetName="ExpandPath" Value="#FF27C7F7"/>
-                            <Setter Property="Fill" TargetName="ExpandPath" Value="#FFCCEEFB"/>
-                        </Trigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="IsMouseOver" Value="True"/>
-                                <Condition Property="IsChecked" Value="True"/>
-                            </MultiTrigger.Conditions>
-                            <Setter Property="Stroke" TargetName="ExpandPath" Value="#FF1CC4F7"/>
-                            <Setter Property="Fill" TargetName="ExpandPath" Value="#FF82DFFB"/>
-                        </MultiTrigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-    <local:LevelToIndentConverter x:Key="LevelToIndentConverter"/>
-
-    
-    
     <Style TargetType="{x:Type local:TreeListView}">
-        <Style.Resources>
-            <DataTemplate x:Key="CellTemplate_Name11">
-                <DockPanel>
-                    <ToggleButton x:Name="Expander" 
-            Margin="{Binding Level, Converter={StaticResource LevelToIndentConverter},RelativeSource={RelativeSource AncestorType={x:Type local:TreeListViewItem}}}"
-            IsChecked="{Binding Path=IsExpanded,RelativeSource={RelativeSource AncestorType={x:Type local:TreeListViewItem}}}" ClickMode="Press" Style="{StaticResource ExpandCollapseToggleStyle}"/>
-                    <TextBlock Text="{Binding Name}"/>
-                </DockPanel>
-                <DataTemplate.Triggers>
-                    <DataTrigger Binding="{Binding Path=HasItems,RelativeSource={RelativeSource AncestorType={x:Type local:TreeListViewItem}}}" Value="False">
-                        <Setter TargetName="Expander" Property="Visibility" Value="Hidden"/>
-                    </DataTrigger>
-                </DataTemplate.Triggers>
-            </DataTemplate>
-        </Style.Resources>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:TreeListView}">
@@ -74,22 +11,18 @@
                             BorderThickness="{TemplateBinding BorderThickness}">
                         <DockPanel>
                             <GridViewHeaderRowPresenter x:Name="header" DockPanel.Dock="Top"/>
-                            <Border BorderThickness="2">
-                                <ItemsPresenter/>
-                            </Border>
+                            <ScrollViewer>
+                                <Border BorderThickness="2">
+                                    <ItemsPresenter/>
+                                </Border>
+                            </ScrollViewer>
+                            
                         </DockPanel>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-
-    <GridViewColumnCollection x:Key="gvcc">
-        <GridViewColumn Header="Name" CellTemplate="{StaticResource CellTemplate_Name}" />
-        <GridViewColumn Header="Age"      DisplayMemberBinding="{Binding Age}" Width="60" />
-        <GridViewColumn Header="Sex"      DisplayMemberBinding="{Binding Sex}" Width="60"/>
-    </GridViewColumnCollection>
-
 
     <Style TargetType="{x:Type local:TreeListViewItem}">
         <Setter Property="Template">
