--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -143,14 +143,14 @@
         </Style>
 
         <DataTemplate x:Key="group1">
-            <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal" Background="Transparent">
                 <CheckBox VerticalAlignment="Center"/>
                 <TextBlock Text="{Binding Name}"/>
             </StackPanel>
         </DataTemplate>
 
         <DataTemplate x:Key="item1">
-            <TextBlock Text="{Binding Name}"/>
+            <TextBlock Text="{Binding Name}" Background="Transparent"/>
         </DataTemplate>
         <local:TestItemSelector x:Key="ss" Group1="{StaticResource group1}" Item1="{StaticResource item1}"/>
         <DataTemplate x:Key="opgroup">
@@ -300,8 +300,7 @@
             <qtreelist:TreeListView.ItemTemplate >
                 <HierarchicalDataTemplate 
                     ItemTemplateSelector="{StaticResource ss}" 
-                            ItemsSource="{Binding Items}" 
-                                          >
+                            ItemsSource="{Binding Items}">
                 </HierarchicalDataTemplate>
 
             </qtreelist:TreeListView.ItemTemplate>
