--- a/QSoft.WPF.TreeListView/Themes/Generic.xaml
+++ b/QSoft.WPF.TreeListView/Themes/Generic.xaml
@@ -146,20 +146,17 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:TreeListViewItem}">
-                    <StackPanel>
+                    <StackPanel Background="Transparent">
                         <Border Name="Bd"
                       Background="{TemplateBinding Background}"
                       BorderBrush="{TemplateBinding BorderBrush}"
                       BorderThickness="{TemplateBinding BorderThickness}"
                       Padding="{TemplateBinding Padding}">
-                            <!--<GridViewRowPresenter x:Name="PART_Header"
-                              Content="{TemplateBinding Header}"
-                              Columns="{StaticResource gvcc}" />-->
                             <GridViewRowPresenter x:Name="PART_Header" 
                                         Content="{TemplateBinding Header}"/>
                         </Border>
 
-                        <ItemsPresenter x:Name="ItemsHost" />
+                        <ItemsPresenter x:Name="ItemsHost"/>
                     </StackPanel>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsExpanded" Value="false">
