--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
+        xmlns:region="clr-namespace:QSoft.WPF.MVVM.Region"
         xmlns:qvalueconvert="clr-namespace:QSoft.WPF.ValueConvert"
         xmlns:qtreelist ="clr-namespace:QSoft.WPF.TreeListView;assembly=QSoft.WPF.TreeListView"
         Title="MainWindow" Height="450" Width="800">
@@ -224,6 +225,7 @@
             <RadioButton IsChecked="{Binding AAs, Converter={StaticResource aas}, ConverterParameter=100}">One</RadioButton>
             <RadioButton IsChecked="{Binding AAs, Converter={StaticResource aas}, ConverterParameter=101}">Two</RadioButton>
             <RadioButton IsChecked="{Binding AAs, Converter={StaticResource aas}, ConverterParameter=102}">Three</RadioButton>
+            <ContentControl Background="Red" Height="100" region:ContentControlRegion.Name="aaa"/>
         </StackPanel>
         <local:TreeListView Visibility="Collapsed" x:Name="_list" ItemsSource="{Binding Children}"  BorderThickness="2">
             <local:TreeListView.ItemTemplate >
