--- a/WPF_TouchKeyboardNotifier/MainWindow.xaml
+++ b/WPF_TouchKeyboardNotifier/MainWindow.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_TouchKeyboardNotifier"
         mc:Ignorable="d"
+        Loaded="Window_Loaded"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <TextBox InputScope="TelephoneNumber" GotFocus="TextBox_GotFocus"/>
+        <CheckBox Grid.Row="1" Click="CheckBox_Click"/>
     </Grid>
 </Window>
